# SnapAlert

./: .gitignore  README.md  pyproject.toml  test_api.py  vercel.json
backend/: .env.example  config.py  database.py  main.py  requirements.txt  schemas.py  vercel.json
backend/routers/: __init__.py  snapalert.py  users.py
backend/services/: __init__.py  matcher.py  poller.py  realestate_api.py  sms.py
frontend/: .env.example  .gitignore  index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AlertCard.css  AlertCard.jsx  OptInModal.css  OptInModal.jsx  SnapAlertBadge.css  SnapAlertBadge.jsx
frontend/src/context/: SnapAlertContext.jsx
frontend/src/pages/: Home.css  Home.jsx  SnapAlertApp.css  SnapAlertApp.jsx  SnapAlertDashboard.css  SnapAlertDashboard.jsx
