[project]
name = "snapalert"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "numpy",
    "twilio",
    "apscheduler",
    "python-multipart",
    "aiofiles"
]

[tool.vercel]
entrypoint = "backend.main:app"
